[project]
name = "didcomm-v2-tester"
version = "0.1.0"
description = "Meep"
authors = [
    {name = "Colton Wolkins (Indicio work address)", email = "colton@indicio.tech"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "didcomm-messaging[askar,did-peer]>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache2"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
